Install latest pip for virtual environments
To avoid errors trying to install latest dependencies using
unexpected pip version.

It allows us to run tests on RHEL7.4

Also, update 'README' file with actual information about running
commands in venvs.

Change-Id: I154be92cbaa46b7169d2a259acdb05d50448d570

--- a/README
+++ b/README
@@ -4,12 +4,12 @@ Testing
 
 Install 'tox' package first:
 
-    $ pip install tox
+    $ pip install git+git://github.com/tox-dev/tox.git@2.9.1#egg=tox
 
-Run all the tests (currently, it is only pep8 checks):
-
-    $ tox
-
-Run only 'pep8' checks:
+Run 'pep8' checks:
 
     $ tox -e pep8
+
+Run 'functional' tests:
+
+    $ tox -e functional -- glusto -c /path/to/config.yaml --pytest='-v -s tests'
